--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "peerDependencies": {},
   "dependencies": {
+    "@opennetwork/linked-list": "^1.0.3",
     "iterable": "^5.6.0"
   },
   "repository": {
