--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "./dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "tsc --declaration && npm run tslint && node correct-import-extensions.js",
+    "build": "rm -rf dist && tsc --declaration && npm run tslint && node correct-import-extensions.js",
     "watch": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "prepublishOnly": "npm run build"
