--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@opennetwork/progressive-merge",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -13,8 +13,7 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {},
-  "dependencies": {
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/opennetwork/progressive-merge.git"
