--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {},
-  "dependencies": {},
+  "dependencies": {
+    "microtask-collector": "^1.0.4"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/opennetwork/progressive-merge.git"
   },
   "devDependencies": {
-    "iterable": "^5.6.0",
-    "@types/node": "^12.7.8",
+    "@types/node": "^14.14.35",
     "esm": "^3.2.25",
     "filehound": "^1.17.3",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "iterable": "^5.6.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.2.3"
   }
 }
