--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "module": "esnext",
         "lib": [
-            "es2018"
+            "es2018",
+            "esnext"
         ],
         "types": [
             "node"
