--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "prepublishOnly": "npm run build"
   },
   "peerDependencies": {},
-  "dependencies": {
-    "microtask-collector": "^1.0.4"
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/opennetwork/progressive-merge.git"
